refactor(report): replace Integer constructor with static valueOf()